# Hybrid-Homomorphic-Encryption

./: CMakeLists.txt  README.md  SDHHE.cpp  SDHHEmultipleinput.cpp
configs/: config.h
libs/seal/include/SEAL-4.0/seal/: kswitchkeys.h
protocols/: SDHHE.cpp  SDHHEmultipleinput.cpp
